# hsqmlstocqt

./: .gitignore  README.md  hsqmlstock.cabal  hsqmlstocqt.cabal
qml/: StockChart.qml  StockListView.qml  StockModel.qml  StockSettings.qml  StockView.qml  stocqt.qml
src/: Main.hs
src/GUI/: StocQt.hs
