name:                hsqmlstocqt
version:             0.1.0.0
synopsis:            Stock Market Visualization in Haskell and Qt Quick
copyright:           (c) 2014 Christopher Reichert
license:             GPL-3
license-file:        LICENSE
author:              Christopher Reichert
maintainer:          creichert07@gmail.com
build-type:          Simple
cabal-version:       >=1.10
category:            Graphics
stability:           experimental
data-files:          qml/*.qml, qml/img/*.png
description:         Haskell HsQML version of StocQt Qt Quick example.

executable hsqmlstocqt
  main-is:             Main.hs
  hs-source-dirs:      src/
  ghc-options:         -Wall -threaded -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:       base  == 4.*,
                       hsqml == 0.3.*,
                       tagged ,
                       text  == 1.1.*

source-repository head
    type:     git
    location: https://github.com/creichert/hsqmlstock
